# filesend

./: LICENSE
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Readme.md  Trunk.toml  app.css  index.html  input.css  package-lock.json  tailwind.config.js
frontend/src/: main.rs
