[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
fast_qr = { features = ["svg"], version = "0.12.5" }
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
wasm-bindgen-futures = "0.4.43"
gloo-console = "0.3.0"
gloo-utils = { version = "0.2.0", features = ["serde"] }
wasm-bindgen = "0.2.9"
js-sys = "0.3.70"

[dependencies.web-sys]
version = "0.3.7"
features = [
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelState",
  "RtcIceCandidate",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSessionDescriptionInit",
]
